...
    <string name="reg_usercomu_checkbox_pre_rot">Presidente</string>
    <string name="reg_usercomu_checbox_admin_rot">Administrador</string>
    <string name="reg_usercomu_checbox_pro_rot">Propietario</string>
    <string name="reg_usercomu_checbox_inq_rot">Arrendatario</string>
    <string name="reg_usercomu_role_rot">Vínculo con la comunidad</string>
    <!-- .......... RegComuFr ........... -->
    <string name="municipio_spinner">municipio</string>
    <string name="municipio">Municipio</string>
    <string name="tipo_via">Tipo vía</string>
    <string name="tipo_via_spinner">tipo de vía </string>
    <string name="nombre_via">Nombre de la vía</string>
    <string name="sufijo_numero">Sufijo</string>
    <!-- ================== RegUserComuAc ================= -->
    <string name="regusuario_comu_ac_label">Comunidad seleccionada</string>
    <!-- ........... RegUserFr ......... -->
    <string name="usuario_alias_hint">Nombre: 6–30 letras, números, _</string>
    <!-- ================= SeeUserComuByComuAc ============ -->
...
