...
            android:maxEms="10"
            android:layout_weight="1"
            android:gravity="center"
        />

        <EditText
            android:id="@+id/reg_usercomu_escalera_ed"
            style="@style/textBase.editField"
            android:hint="@string/reg_usercomu_escalera_hint"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:layout_weight="1"
            android:gravity="center"
...
