...
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentLeft="true"/>

    <EditText
            android:id="@+id/reg_usuario_password_ediT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/text_hint_size"
            android:imeOptions="actionNext"
            android:maxEms="50"
...
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/reg_usuario_rotulo"/>

    <EditText
            android:id="@+id/reg_usuario_password_confirm_ediT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/text_hint_size"
            android:imeOptions="actionNext"
            android:maxEms="50"
...
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/reg_usuario_password_ediT"/>

    <EditText
            android:id="@+id/reg_usuario_email_editT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_hint_size"
            android:imeOptions="actionNext"
            android:maxEms="60"
...
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/reg_usuario_password_confirm_ediT"/>

    <EditText
            android:id="@+id/reg_usuario_alias_ediT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/text_hint_size"
            android:imeOptions="actionNext"
            android:maxEms="30"
...
